syntax = "proto3";

package ai.metathings.service.core;

import "google/protobuf/wrappers.proto";

import "github.com/mwitkow/go-proto-validators/validator.proto";

message DeleteCoreRequest {
	google.protobuf.StringValue id = 1 [(validator.field) = {msg_exists: true}];
}
