syntax = "proto3";

package ai.metathings.service.core;

import "google/protobuf/wrappers.proto";

import "github.com/mwitkow/go-proto-validators/validator.proto";

import "core.proto";

message GetCoreRequest {
	google.protobuf.StringValue id = 1 [(validator.field) = {msg_exists: true}];
}

message GetCoreResponse {
	Core core = 1;
}
