syntax = "proto3";

package ai.metathings.service.core;

import "core.proto";

message ShowCoreResponse {
	Core core = 1;
}
