syntax = "proto3";

package ai.metathings.service.cored;

import "google/protobuf/wrappers.proto";

import "github.com/mwitkow/go-proto-validators/validator.proto";

import "core.proto";

message CreateCoreRequest {
	google.protobuf.StringValue name = 1;
}

message CreateCoreResponse {
	Core core = 1;
}
