syntax = "proto3";

package ai.metathings.service.cored;

import "google/protobuf/wrappers.proto";

import "github.com/mwitkow/go-proto-validators/validator.proto";

import "github.com/nayotta/metathings/pkg/proto/common/state/core_state.proto";
import "core.proto";

message ListCoresRequest {
	google.protobuf.StringValue name = 1;
	google.protobuf.StringValue project_id = 2;
	google.protobuf.StringValue owner_id = 3;
	ai.metathings.state.CoreState state = 4;
}

message ListCoresResponse {
	repeated Core cores = 1;
}
