syntax = "proto3";

package ai.metathings.service.deviced;

import "google/protobuf/wrappers.proto";
import "google/protobuf/any.proto";

message StreamErrorResponsePayload {
	string name = 1;
	string service_name = 2;
	string method_name = 3;
	string context = 4;
}

message UnaryCallRequestPayload {
	google.protobuf.StringValue module_name = 1;
	google.protobuf.StringValue component_name = 2;
	google.protobuf.StringValue method_name = 3;
	google.protobuf.Any value = 4;
}

message UnaryCallResponsePayload {
	string module_name = 1;
	string component_name = 2;
	string method_name = 3;
	google.protobuf.Any value = 4;
}

message StreamCallRequestPayload {
	oneof payload {
		StreamCallConfigRequest config = 1;
		StreamCallDataRequest data = 2;
	}
}

message StreamCallResponsePayload {
	oneof payload {
		StreamCallConfigResponse config = 1;
		StreamCallDataResponse data = 2;
	}
}

message StreamCallConfigRequest {
	google.protobuf.StringValue module_name = 1;
	google.protobuf.StringValue component_name = 2;
	google.protobuf.StringValue method_name = 3;
}

message StreamCallConfigResponse {
	string module_name = 1;
	string component_name = 2;
	string method_name = 3;
}

message StreamCallDataRequest {
	google.protobuf.Any value = 1;
}

message StreamCallDataResponse {
	google.protobuf.Any value = 1;
}
